# ParamTree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generatewidgets.h  paramcheckbox.cpp  paramcheckbox.h  paramgroupbox.h  paramitemdelegate.cpp  paramspinbox.h  paramtabwidget.cpp  paramtree.cpp  paramtree.h  paramtreeitem.cpp  paramtreewidget.h  scientificlineedit.cpp  scientificlineedit.h
.github/workflows/: cmake.yml
Examples/Optics/: CMakeLists.txt  OpticsTreeWidget.pro  main.cpp  mainwindow.h  mainwindow.ui  opticstree.h
demos/: CMakeLists.txt
demos/Optics/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  opticstree.cpp  opticstree.h
include/ParamTree/: ParamTree_global.h  TreeItem  TreeModel  TreeTabWidget  TreeView  TreeWidget  groupboxwidget.h  paramcombobox.h  paramdoublespinbox.h  paramgroupwidget.h  paramitemdelegate.h  paramscientificlineedit.h  paramtreeitem.h
include/ParamTree/groupwidget/: treegroupbox.h  treewidget.h
include/ParamTree/itemwidgets/: generatewidgets.h  itemwidget.h  treecheckbox.h  treecombobox.h  treedblspinbox.h  treelineedit.h  treescilineedit.h  treespinbox.h
include/ParamTree/modelview/: itemdelegate.h  treeitem.h  treemodel.h  treeview.h
include/ParamTree/shared/: auxsmallclass.h  scientificlineedit.h  widgetinitializer.h
include/ParamTree/tabwidget/: tabpage.h  tabwidget.h  treetabwidget.h
paramtree/: CMakeLists.txt  generatewidgets.cpp  groupboxwidget.cpp  itemwidget.h  paramcombobox.cpp  paramitemdelegate.cpp  paramscientificlineedit.cpp  paramspinbox.cpp  paramtabwidget.h  paramtreeitem.h  paramtreewidget.cpp
scripts/windows/: build.bat  configure.bat
src/: CMakeLists.txt  paramgroupbox.cpp  paramlineedit.cpp  paramtreeitem.cpp  paramtreemodel.cpp  tabwidget.cpp
src/groupwidget/: treegroupbox.cpp  treewidget.cpp
src/itemwidgets/: generatewidgets.cpp  itemwidget.cpp  treecheckbox.cpp  treecombobox.cpp  treedblspinbox.cpp  treelineedit.cpp  treescilineedit.cpp  treespinbox.cpp
src/modelview/: itemdelegate.cpp  treeitem.cpp  treemodel.cpp  treeview.cpp
src/shared/: scientificlineedit.cpp  widgetinitializer.cpp
src/tabwidget/: tabpage.cpp  tabwidget.cpp  treetabwidget.cpp
